02.1-ingress/svc-pod-1-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-pod-1
spec:
  type: ClusterIP
  selector:
    app: primeiro-pod
  ports:
    - port: 80
