02.1-ingress/svc-ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-local
  labels:
    name: myingress-local
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: svc-pod-1
                port: 
                  number: 80
          - path: /apache
            pathType: Prefix
            backend:
              service:
                name: svc-pod-2
                port: 
                  number: 80
