02.1-ingress/svc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myingress
  labels:
      name: myingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: teste.DNS
      http:
        paths:
          - path: "/nginx"
            pathType: Prefix
            backend:
              serviceName: svc-pod-1
              servicePort: 80
          - path: "/apache"
            pathType: Prefix
            backend:
              serviceName: svc-pod-2
              servicePort: 80
